--- a/CWM.css
+++ b/CWM.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) { 
+
 #CB {
 	background-image: url("https://www.mediafire.com/convkey/6d76/cq6oowth3a6sdy1zg.jpg");
 	width: 1280px;
@@ -6,7 +6,7 @@
 
 	
 	
-	} }
+	} 
 #T h1 {
 	margin-top: 0px;
 	padding-top:50px;
