--- a/CWM.css
+++ b/CWM.css
@@ -1,5 +1,5 @@
 #CB {
-	background-image: url("https://www.mediafire.com/convkey/6d76/cq6oowth3a6sdy1zg.jpg");
+	background-image: url("http://www.mediafire.com/convkey/6d76/cq6oowth3a6sdy1zg.jpg");
 	width: 1280px;
 	height: 927px;
 
